4.1.0
Merged from 4.0:
Merged from 3.11:
Merged from 3.0:
 * Fix incorrect resource name in LIST PERMISSION output (CASSANDRA-17848)
 * Suppress CVE-2022-41854 and similar (CASSANDRA-18083)


4.1-rc1
 * Avoid schema mismatch problems on memtable API misconfiguration (CASSANDRA-18040)
 * Start Paxos auto repair in CassandraDaemon (CASSANDRA-18029)
 * Restore streaming_keep_alive_period on the netty control streaming channel (CASSANDRA-17768)
 * Move Schema.FORCE_LOAD_KEYSPACES and Schema.FORCE_LOAD_KEYSPACES_PROP to CassandraRelevantProps (CASSANDRA-17783)
 * Add --resolve-ip option to nodetool gossipinfo (CASSANDRA-17934)
 * Allow pre-V5 global limit on bytes in flight to revert to zero asynchronously in RateLimitingTest (CASSANDRA-17927)
Merged from 4.0:
 * Harden parsing of boolean values in CQL in PropertyDefinitions (CASSANDRA-17878)
 * Fix error message about type hints (CASSANDRA-17915)
 * Fix possible race condition on repair snapshots (CASSANDRA-17955)
 * Fix ASM bytecode version inconsistency (CASSANDRA-17873)
 * Remove empty cq4 files in log directory to not fail the startup of BinLog (CASSANDRA-17933)
 * Fix multiple BufferPool bugs (CASSANDRA-16681)
 * Fix StorageService.getNativeaddress handling of IPv6 addresses (CASSANDRA-17945)
Merged from 3.11:
 * Fix Splitter sometimes creating more splits than requested (CASSANDRA-18013)
 * Suppress CVE-2022-42003 and CVE-2022-42004 (CASSANDRA-17966)
 * Make LongBufferPoolTest insensitive to timing (CASSANDRA-16681)
Merged from 3.0:
 * Fix running Ant rat targets without git (CASSANDRA-17974)
 * Harden JMX by resolving beanshooter issues (CASSANDRA-17921)
 * Suppress CVE-2019-2684 (CASSANDRA-17965)
 * Fix auto-completing "WITH" when creating a materialized view (CASSANDRA-17879)

4.1-beta1
 * We should not emit deprecation warning on startup for `key_cache_save_period`, `row_cache_save_period`, `counter_cache_save_period` (CASSANDRA-17904)