@@ -1,4 +1,5 @@
 4.1.0
+ * Fix ContentionStrategy backoff and Clock.waitUntil (CASSANDRA-18086)
 Merged from 4.0:
 Merged from 3.11:
 Merged from 3.0:
